# speedometer_testapp

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/java/com/testapp/speedometer/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
main/: build.gradle
main/src/main/: AndroidManifest.xml
main/src/main/java/com/testapp/speedometer/controls/: SpeedometerView.kt
service/: build.gradle
service/src/main/: AndroidManifest.xml
service/src/main/aidl/com/testapp/speedometer/service/: IGenerateService.aidl  IGenerateServiceCallback.aidl
service/src/main/cpp/: CMakeLists.txt  generateService-lib.cpp
service/src/main/cpp/include/: NeedlePositionGenerator.h
service/src/main/cpp/src/: NeedlePositionGenerator.cpp
service/src/main/java/com/testapp/speedometer/service/: GenerateService.kt  NeedlePositionInterface.kt
